# Breakout

./: build.zig  libc-file
GameBreakout/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
GameBreakout/cmake-module/: FindIrrklang.cmake
GameBreakout/res/shaders/: post_processing.frag  post_processing.vert  sprite.frag  sprite.vert
GameBreakout/src/: CMakeLists.txt  main.cpp
GameBreakout/src/framework/core/: game.cpp  game.h  resource_manager.cpp  resource_manager.h
GameBreakout/src/framework/rendering/: particle_generator.cpp  particle_generator.h  post_processor.cpp  post_processor.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
GameBreakout/src/game/: ball_object.cpp  ball_object.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  power_up.h
levels/: base.lvl  gaps.lvl  standard.lvl
shaders/: .background.vert.swp  color_uniform.frag  instance.vert  norotate.vert  postproc.frag  postproc.vert  postprocess.inc  scene.inc
src/: cimport.zig  game.zig  game_levels.zig  game_load.zig  main.zig  math.zig  mpg_main.zig  particles.zig  postprocess.zig  powerups.zig  sound.zig  soundio_example.zig  utils.zig  vertex_data.zig  vks.zig
src/cimport/: gl.zig  glfw.zig  ktx.zig  mpg.zig  soundio.zig  spirv.zig  stb.zig  vma.zig  vulkan.zig  vulkan_core.zig
src/game/: game.old.zig  game.zig  game_levels.zig  game_load.zig
src/vks/: context.zig  image.zig  pipeline.zig  swapchain.zig  utils.zig
textures/: awesomeface_BC3.ktx  background_BC3.ktx  block_BC3.ktx  block_solid_BC3.ktx  container_BC3.ktx  paddle_BC3.ktx  particle_BC3.ktx  powerup_chaos_BC3.ktx  powerup_confuse_BC3.ktx  powerup_increase_BC3.ktx  powerup_passthrough_BC3.ktx  powerup_speed_BC3.ktx  powerup_sticky_BC3.ktx
